# agentic-workflow

./: .flake8  .gitignore  .pre-commit-config.yaml  ASSESSMENT_SUMMARY.md  CHANGELOG.md  CONVENTIONS.md  DOCUMENTATION_UPDATE_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  pyproject.toml  temp_test.py
.cursor/rules/: agent-rules.mdc
.github/: copilot-instructions.md
docs/: ACTION_PLAN_2025.md  CUSTOMER_GETTING_STARTED.md  DEVELOPER_GUIDE.md  EXECUTION_KICKOFF_2025.md  FINAL_IMPLEMENTATION_REPORT.md  IMPLEMENTATION_GUIDE.md  OPENAPI_ENHANCEMENT_PLAN.md  OPENAPI_INTEGRATION.md  PROJECT_ASSESSMENT_2025.md  README.md  REST_API_EXAMPLES.md  SPRINT_PROGRESS_REPORT.md  STRATEGIC_CONSIDERATIONS.md  WORKFLOW_ORCHESTRATION_DECISION.md  executive-summary.md  mcp-integration-guide.md  usability-assessment.md
docs/api/: conf.py  index.rst  modules.rst
docs/architecture/: ARCHITECTURAL_ASSESSMENT_2025.md  ARCHITECTURE_DIAGRAMS.md  agentic-design.md  components.md  design.md  emerging-architectures.md  guardrails-error-handling.md  integration-strategies.md  iterative-development.md  mapping.md  memory-management.md  metrics-and-kpis.md  monitoring-metrics.md  patterns.md  stakeholder-engagement.md  testing-strategies.md
docs/audit/: README.md  architecture-audit.md  audit-summary.md  current-state-assessment.md  design-patterns-analysis.md  implementation-gaps.md  implementation-status-update.md  issues-and-next-steps.md  recommendations.md
docs/database/: POSTGRESQL_SCHEMA.md
docs/features/: README.md  communication-system.md  reasoning-patterns.md  tool-integration.md  user-guide.md
docs/implementation/: dependencies.md  guide.md  plan.md  python-setup-guide.md
docs/mcp/: README.md  architecture.md  available-servers.md  custom-servers.md  implementation-guide.md  introduction.md  security.md
docs/planning/: epics-and-tasks.md  overview.md  roadmap.md  tools.md  updated-roadmap.md
docs/requirements/: mapping.md  prototypes.md  use-cases.md
examples/: README.md  basic_workflow_example.py  cicd_agent_demo.py  complete_workflow_demo.py  example_calculator.py  guardrails_example.py  mcp_advanced_features.py  mcp_basic_usage.py  mcp_integration_demo.py  memory_service_example.py  memory_system_example.py  phase3_billing_demo.py  phase4_analytics_demo.py  production_workflow_demo.py  program_manager_demo.py  raise_communication_demo.py  reasoning_patterns_demo.py  requirement_engineering_demo.py  rest_api_demo.py  tenant_and_file_demo.py  test_agent_demo.py  test_generated_calculator.py  tool_system_demo.py
src/agentic_workflow/: __init__.py
src/agentic_workflow/agents/: __init__.py  base.py  cicd.py  code_generation.py  planning.py  program_manager.py  requirement_engineering.py  review.py  testing.py
src/agentic_workflow/analytics/: __init__.py  columnar_analytics.py  sentiment_analysis.py
src/agentic_workflow/api/: agents.py  auth.py  auth_endpoints.py  billing.py  business_metrics.py  files.py  health.py  main.py  mcp.py  tenants.py  tier_auth.py  tools.py  websocket_execution.py  workflow_orchestration.py  workflow_protected.py  workflows.py
src/agentic_workflow/core/: __init__.py  communication.py  config.py  engine.py  exceptions.py  file_attachment.py  interfaces.py  logging_config.py  reasoning.py  tenant.py
src/agentic_workflow/events/: __init__.py
src/agentic_workflow/graph/: __init__.py
src/agentic_workflow/graph/application/: __init__.py  knowledge_graph_service.py
src/agentic_workflow/graph/domain/: __init__.py  models.py  ports.py  task_models.py  task_ports.py
src/agentic_workflow/graph/infrastructure/: __init__.py  config.py  factory.py  neo4j_repository.py  task_repository.py
src/agentic_workflow/guardrails/: __init__.py  error_handling.py  input_validation.py  resource_limits.py  safety_checks.py  service.py
src/agentic_workflow/mcp/: __init__.py
src/agentic_workflow/mcp/client/: __init__.py  base.py  registry.py
src/agentic_workflow/mcp/integration/: __init__.py  agents.py  memory.py  plugin_manager.py  prompt_security.py  security.py  threat_detection.py
src/agentic_workflow/mcp/tools/: __init__.py  enhanced_registry.py
src/agentic_workflow/memory/: __init__.py  cache.py  cache_store.py  factory.py  interfaces.py  manager.py  service.py  short_term.py  vector_store.py
src/agentic_workflow/memory/connections/: __init__.py  redis_connection.py  weaviate_connection.py
src/agentic_workflow/monitoring/: __init__.py  health.py
src/agentic_workflow/tools/: __init__.py  communication.py  development.py
src/agentic_workflow/utils/: __init__.py  base.py  connection.py  embeddings.py  helpers.py  metrics.py  serialization.py
tests/agents/: test_cicd.py
tests/integration/: test_example_integration.py
tests/integration/mcp/: __init__.py
tests/unit/: test_cache_store.py  test_config.py  test_connection.py  test_connection_managers.py  test_core_architecture.py  test_error_handling.py  test_events.py  test_example.py  test_exceptions.py  test_factory.py  test_guardrails_service.py  test_helpers.py  test_input_validation.py  test_logging_config.py  test_memory_cache.py  test_memory_factory.py  test_memory_interfaces.py  test_memory_management.py  test_memory_manager.py  test_memory_service.py  test_memory_short_term.py  test_memory_vector_store.py  test_package_import.py  test_resource_limits.py  test_safety_checks.py  test_serialization.py  test_utils_embeddings.py
tests/unit/agents/: test_code_generation.py  test_planning.py  test_program_manager.py  test_requirement_engineering.py  test_review.py  test_testing.py
tests/unit/analytics/: test_columnar_analytics.py  test_sentiment_analysis.py
tests/unit/api/: test_auth.py  test_billing.py  test_tier_auth.py  test_workflow_orchestration.py  test_workflow_protected.py  test_workflows.py
tests/unit/core/: test_communication.py  test_file_attachment.py  test_reasoning.py  test_tenant.py
tests/unit/mcp/: __init__.py  test_agents.py  test_client.py  test_tools.py
tests/unit/tools/: test_tools.py
tools/scripts/: check_docstrings.py
(+4 files in other folders)
